Suspened untill payment comes thurw

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
       <div class="parallax1" id="aboutUs"></div>
       <div class="text1">
             <h><u id="aqua">Miami Code</u></h>
-            <p>This election has been maddening... We're trying to keep our minds on work and stay busy. We've added all
-                  kinds of new jewelry designs over the last month. Please take 20% off everything in our entire store
-                  and keep us running around! Enter the code "DONEWITH2020" anytime between now and midnight on Sunday
-                  11/8 (if there is a Sunday 11/8).
+            <p>
+                  <h1>Change your career at Miami Code!</h1>
+                  Miami’s booming tech ecosystem has plenty of opportunities for our graduates. We’ll guide you through our extensive network of alumni and hiring partners across the United States and around the world.
             </p>
+            <div class='teamicon'>
+                  fi
+                   <img src="images/download.jpeg" alt="">
+                   <img src="images/download (1).jpeg" alt=""> 
+                   <img src="images/images.jpeg" alt=""> 
+                  </div>
       </div>
       <!-- <div class="parallax2" id="aboutUs"></div>
       <div class="text2">
